# politiekmatcher

./: .env.example  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
apps/api/: schema.py  services.py  tests.py  types.py
apps/chat/: ai.py  context_ai.py  models.py
apps/content/: models.py  views.py
apps/profiles/: apps.py  models.py  schema.py  services.py  signals.py  tasks.py  urls.py  utils.py  views.py
apps/scraping/: selenium_utils.py
apps/utils/: classifier.py  llm.py  match_opinions.py  search.py
data/: example_opinions.jsonl  openai_finetune_political_dimensions_examples.jsonl
docs/: README.md  data_sources_and_processing.md  matching_algorithm.md  openai_integration.md  opinion_classification.md  political_dimensions_finetuning.md  relevance_scores.md  system_architecture.md
politiekmatcher/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
scraped_content/: 50plus_94bb34ba.txt  bbb_c52ebf62.txt  bij1_ee6fb1c1.txt  bvnl_6432e4b4.txt  cda_cc632a1a.txt  cu_07c31f93.txt  d66_880a697c.txt  denk_afc7493a.txt  fvd_7dfb3d34.txt  gl-pvda_9715a5b0.txt  ja21_95467b39.txt  lef_1149f377.txt  libertaire_partij_eb2c9d74.txt  lp_eb2c9d74.txt  nederland_met_een_plan_f2bd165c.txt  nsc_28389e80.txt  partij_voor_de_sport_aec5c3ff.txt  partijvdsport_aec5c3ff.txt  piratenpartij_-_de_groenen_ed8328d7.txt  pvdd_7f3b931f.txt  pvv_6f9ccdc9.txt  samen_voor_nederland_02252fd5.txt  sgp_8665c967.txt  sp_2345f652.txt  splinter_6cd3a4ce.txt  volt_8d574aa3.txt  vvd_626c56b0.txt  vvd_ec9fdfa0.txt
tests/: test_party_positions.py  test_relevance_scores.py  test_simple_match.py
(+41 files in other folders)
